--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CommunicationNetwork\ListenerTests.cs" />
+    <Compile Include="CommunicationXMLTests\MessageObjectsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -68,7 +69,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="CommunicationXMLTests\" />
     <Folder Include="Components\" />
   </ItemGroup>
   <Choose>
