--- a/src/CommunicationXML/CommunicationXML.csproj
+++ b/src/CommunicationXML/CommunicationXML.csproj
@@ -39,17 +39,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DivideProblem.cs" />
-    <Compile Include="MessageObject.cs" />
+    <Compile Include="MessageObjects\DivideProblem.cs" />
+    <Compile Include="MessageObjects\MessageObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Register.cs" />
-    <Compile Include="RegisterResponse.cs" />
+    <Compile Include="MessageObjects\Register.cs" />
+    <Compile Include="MessageObjects\RegisterResponse.cs" />
     <Compile Include="Solutions.cs" />
     <Compile Include="SolvePartialProblems.cs" />
-    <Compile Include="SolveRequest.cs" />
-    <Compile Include="SolveRequestResponse.cs" />
-    <Compile Include="Status.cs" />
-    <Compile Include="Thread.cs" />
+    <Compile Include="MessageObjects\SolveRequest.cs" />
+    <Compile Include="MessageObjects\SolveRequestResponse.cs" />
+    <Compile Include="MessageObjects\Status.cs" />
+    <Compile Include="MessageObjects\Thread.cs" />
     <Compile Include="XMLParser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
