Register, RegisterResponse serialization to proper Xmls, sample deserialization, tests, StringToBinaryConverter class implemented

--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="CommunicationNetwork\ListenerTests.cs" />
     <Compile Include="CommunicationXMLTests\MessageObjectsTests.cs" />
+    <Compile Include="CommunicationXMLTests\ObjectToXmlTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
