--- a/src/CommunicationXML/CommunicationXML.csproj
+++ b/src/CommunicationXML/CommunicationXML.csproj
@@ -43,6 +43,7 @@
     <Compile Include="MessageObjects\MessageObject.cs" />
     <Compile Include="MessageObjects\SolutionRequest.cs" />
     <Compile Include="MessageObjects\PartialProblem.cs" />
+    <Compile Include="Parser\StringToBytesConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MessageObjects\Register.cs" />
     <Compile Include="MessageObjects\RegisterResponse.cs" />
