--- a/src/CommunicationXML/CommunicationXML.csproj
+++ b/src/CommunicationXML/CommunicationXML.csproj
@@ -44,6 +44,7 @@
     <Compile Include="MessageObjects\SolutionRequest.cs" />
     <Compile Include="MessageObjects\PartialProblem.cs" />
     <Compile Include="Parser\StringToBytesConverter.cs" />
+    <Compile Include="Parser\XmlMessageSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MessageObjects\Register.cs" />
     <Compile Include="MessageObjects\RegisterResponse.cs" />
