NetworkClient (klasa klienta). NetworkListener(poprzednio Listener) poprawka + dodanie metody Stop(). Program(test dla NetworkCLient + NetworkListener)

--- a/src/CommunicationNetwork/CommunicationNetwork.csproj
+++ b/src/CommunicationNetwork/CommunicationNetwork.csproj
@@ -40,7 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionContext.cs" />
-    <Compile Include="Listener.cs" />
+    <Compile Include="NetworkClient.cs" />
+    <Compile Include="NetworkListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
