--- a/src/SolverComponents/SolverComponents.csproj
+++ b/src/SolverComponents/SolverComponents.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolverNode.cs" />
+    <Compile Include="SolverRegisteredProblem.cs" />
     <Compile Include="TMNode.cs" />
   </ItemGroup>
   <ItemGroup>
