--- a/src/TaskManager/TaskManager.csproj
+++ b/src/TaskManager/TaskManager.csproj
@@ -60,6 +60,10 @@
       <Project>{e5e545a8-5f2d-4f61-b785-1bebb8b9df76}</Project>
       <Name>Components</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DVRP\DVRP.csproj">
+      <Project>{5b012f2b-f0b5-43ac-8661-53af207ee714}</Project>
+      <Name>DVRP</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SolverComponents\SolverComponents.csproj">
       <Project>{1389dbc9-8f6e-421e-93dc-4d884a63c22d}</Project>
       <Name>SolverComponents</Name>
