Naprawienie bledow. Zmiana double na float. Dodanie watkow i obslugi timeout. Obsluga wyjatkow i stanu TaskSolvera. Zwracanie najlepszego cyklu i czasow dojazdu do lokacji. Opis kodu

--- a/src/DVRP/DVRP.csproj
+++ b/src/DVRP/DVRP.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5B012F2B-F0B5-43AC-8661-53AF207EE714}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DVRP</RootNamespace>
     <AssemblyName>DVRP</AssemblyName>
@@ -59,7 +59,8 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="UCCTaskSolver">
+    <Reference Include="UCCTaskSolver, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\UCCTaskSolver.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
