Komponenty dostsowane do nowej wersji, TODO: wykorzystanie eventow do wzawiania dzialania CN

--- a/src/DVRP/DVRP.csproj
+++ b/src/DVRP/DVRP.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5B012F2B-F0B5-43AC-8661-53AF207EE714}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DVRP</RootNamespace>
     <AssemblyName>DVRP</AssemblyName>
